--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -19,7 +20,6 @@
         </div>
         <div id="recipeContent"></div>
     </div>
-
 </body>
 
 </html>
